<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright Â© 2014 SaganSpirit8@gmail.com
 
 This file is part of the Temperature Converter Android App.
 
 Temperature Converter is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 Temperature Converter is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Temperature Converter.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string name="app_name">Temperature Converter</string>
    <string name="input_default">Input Temperature</string>
    <string name="output_default">Output Temperature</string>
    <string name="menu_settings">Settings</string>
    <string name="button_text">Convert!</string>
    <string name="f_to_c">Fahrenheit to Celsius</string>
    <string name="c_to_f">Celsius to Fahrenheit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_player_list">PlayerList</string>

</resources>