<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright Â© 2014 SaganSpirit8@gmail.com
 
 This file is part of the Temperature Converter Android App.
 
 Temperature Converter is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 Temperature Converter is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Temperature Converter.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TempConverter" >
	
	<com.google.android.gms.ads.AdView 
    	android:id="@+id/adView"
    	android:layout_alignParentTop="true"
    	android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1317597681236702/4777569078"/>
				
    <EditText
    	android:id="@+id/input"
		android:layout_below="@id/adView"    	
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="@dimen/input_size"
        android:hint="@string/input_default"
        android:inputType="numberDecimal" />
	<TextView
		android:id="@+id/output"
		android:layout_below="@id/input"    	
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="@dimen/output_size"
        android:hint="@string/output_default" />
	<Button
		android:id="@+id/button"
		android:layout_below="@id/output"    	
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/button_size"
        android:text="@string/button_text"
        android:onClick="onConvertButtonClicked" />
	<RadioGroup
		android:id="@+id/rgroup"
		android:layout_toRightOf="@id/button"
		android:layout_below="@id/output"
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<RadioButton android:id="@+id/radio1"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:text="@string/f_to_c" 
					 android:onClick="onRadioButtonClicked"/>
		<RadioButton android:id="@+id/radio2"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:text="@string/c_to_f" 
					 android:onClick="onRadioButtonClicked"/>
	</RadioGroup>				 	
</RelativeLayout>